--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "typescript": "^4.5.4",
     "vite": "^2.9.5"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "dayjs": "^1.11.1"
+  }
 }
